# POC_Nhilent

./: README.md
nihilentpoc/: README.md  pyproject.toml
nihilentpoc/src/nihilentpoc/: crew.py  exp.ipynb  main.ipynb  main.py
nihilentpoc/src/nihilentpoc/config/: agents.yaml  agents1.yaml  agents_exp.yaml  tasks.yaml  tasks1.yaml  tasks_exp.yaml
