[project]
name = "nihilentpoc"
version = "0.1.0"
description = "NihilentPOC using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.102.0,<1.0.0"
]

[project.scripts]
nihilentpoc = "nihilentpoc.main:run"
run_crew = "nihilentpoc.main:run"
train = "nihilentpoc.main:train"
replay = "nihilentpoc.main:replay"
test = "nihilentpoc.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
